--- a/login.form/css/master.css
+++ b/login.form/css/master.css
@@ -11,10 +11,10 @@ body {
 .login-box {
     width: 320px;
     height: 420px;
-    background: #000;
-    color: #000;
+    background: #a32162;
+    color: #a91f70;
     top: 50%;
-    left: 50%;
+    left: 30%;
     position: absolute; 
     transform: translate(-50%, -50%);
     box-sizing: border-box;
@@ -38,7 +38,7 @@ body {
 }
 .login-box input {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 70px;
 }
 .login-box input [type="text"],
 .login-box input [type="password"] {
