especificando el alto y el ancho del fondo

--- a/Login.html/style.css
+++ b/Login.html/style.css
@@ -14,3 +14,10 @@ body {
     align-items: center;
 
 }
+
+.form-box {
+    width: 300px;
+    padding: 40px;
+    background: #191919;
+    text-align: center;
+}
