--- a/Login.html/style.css
+++ b/Login.html/style.css
@@ -21,3 +21,9 @@ body {
     background: #191919;
     text-align: center;
 }
+
+.form-title {
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 500;
+}
