modificando para funcion de button

--- a/Login.html/style.css
+++ b/Login.html/style.css
@@ -27,3 +27,8 @@ body {
     text-transform: uppercase;
     font-weight: 500;
 }
+
+.form-box input[type="text"],
+.form-box input[type="password"],
+.form-box button[type="sumbit"] {
+}
