modificando bordes y/o alineamiento de texto

--- a/Login.html/style.css
+++ b/Login.html/style.css
@@ -31,4 +31,10 @@ body {
 .form-box input[type="text"],
 .form-box input[type="password"],
 .form-box button[type="sumbit"] {
+    border: 0;
+    background: none;
+    display: black;
+    margin: 20px auto;
+    padding: 14px 10px;
+    text-align: center;
 }
