--- a/Login.html/style.css
+++ b/Login.html/style.css
@@ -34,7 +34,13 @@ body {
     border: 0;
     background: none;
     display: black;
-    margin: 20px auto;
+    margin: 10px auto;
     padding: 14px 10px;
     text-align: center;
+    border: 2px solid #3742fa;
+    width: 200px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25s;
 }
