--- a/Login.html/style.css
+++ b/Login.html/style.css
@@ -30,10 +30,10 @@ body {
 
 .form-box input[type="text"],
 .form-box input[type="password"],
-.form-box button[type="sumbit"] {
+.form-box button[type="submit"] {
     border: 0;
     background: none;
-    display: black;
+    display: block;
     margin: 10px auto;
     padding: 14px 10px;
     text-align: center;
@@ -42,5 +42,13 @@ body {
     outline: none;
     color: white;
     border-radius: 24px;
-    transition: 0.25s;
+     
+
 }
+
+ .form-box input[type="text"]:focus.
+ .form-box input[type="password"]:focus {
+    width: 280px;
+    border-color: #ffffff;
+ }
+ 
