--- a/Login.html/style.css
+++ b/Login.html/style.css
@@ -42,13 +42,23 @@ body {
     outline: none;
     color: white;
     border-radius: 24px;
-     
-
+    transition: 0.25s;
 }
 
- .form-box input[type="text"]:focus.
- .form-box input[type="password"]:focus {
+.form-box input[type="text"]:focus.
+.form-box input[type="password"]:focus {
     width: 280px;
     border-color: #ffffff;
  }
+.form-box button[type="submit"] {
+    border: 0;
+    background: #5352ed;
+    cursor: pointer;
+    border: 2px solid #3742fa:
+}
+.form-box button[type="submit"]:hover {
+    background: none;
+}
+
+
  
